--- a/docker/.env
+++ b/docker/.env
@@ -1,3 +1,7 @@
+# 固定项目名称，避免因目录变化导致数据卷名称改变
+# Fixed project name to prevent volume name changes due to directory changes
+COMPOSE_PROJECT_NAME=ragflow
+
 # The type of doc engine to use.
 # Available options:
 # - `elasticsearch` (default)
@@ -191,3 +195,4 @@ REGISTER_ENABLED=1
 # COMPOSE_PROFILES=infinity,sandbox
 #    - For OpenSearch:
 # COMPOSE_PROFILES=opensearch,sandbox
+RAGFLOW_IMAGE=ragflow:dev
